--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.16)
 
 # Set project settings
 project(Pacman VERSION 1.0)
@@ -13,7 +13,7 @@ find_package(SDL2 REQUIRED)
 find_package(glm REQUIRED)
 
 # Include dirs
-include_directories(${SDL2_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} src vendor/entt/include)
+include_directories(${SDL2_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} "src" "vendor/entt/include")
 
 
 ####################
@@ -29,3 +29,4 @@ add_compile_definitions(DEBUG)
 # Create executable
 add_executable(Pacman ${SOURCES})
 target_link_libraries(Pacman ${SDL2_LIBRARIES})
+target_precompile_headers(Pacman PRIVATE "src/pch.h")
